# Syllabi-Insights

./: .env.example  .gitignore  Dockerfile  README.md  manifest.yaml  pyproject.toml  start.sh
project/: __init__.py  acp.py
project/lib/: __init__.py  tools.py  vectorstore.py
